history/v0.9/agent/tools/README.md
# Tool Catalog

这个文件是给 `tool_search` 看的轻量工具目录。它只负责帮 subagent 判断“本轮应该开放哪些工具”；真正传给主模型的 function schema 仍由 `registry.py` 根据选中工具生成。

## 工具列表

- `read_file`
  - 路径: `agent/tools/filesystem.py`
  - 类别: 文件
  - 并发安全: 是
  - 作用: 读取当前项目内的文本文件。
  - 使用场景: 需要查看项目文件、源码、文档或 agent 生成的文件。

- `write_file`
  - 路径: `agent/tools/filesystem.py`
  - 类别: 文件
  - 并发安全: 否
  - 作用: 写入当前项目内的文本文件，会自动创建父目录。
  - 使用场景: 需要修改项目文件、生成脚本、笔记、计划或临时输出文件。
  - 审查: `requires_review`，执行前会进入权限审查，通常需要用户交互确认。

- `delete_file`
  - 路径: `agent/tools/filesystem.py`
  - 类别: 文件
  - 并发安全: 否
  - 作用: 删除当前项目内的文件；只能删除文件，不能删除目录。
  - 使用场景: 需要移除 agent 生成的临时文件或明确要删除的项目文件。
  - 审查: `requires_review`，执行前会进入权限审查，通常需要用户交互确认。

- `list_dir`
  - 路径: `agent/tools/filesystem.py`
  - 类别: 文件
  - 并发安全: 是
  - 作用: 列出当前项目内目录的文件名。
  - 使用场景: 需要查看项目目录里已有文件。

- `ls_project`
  - 路径: `agent/tools/project.py`
  - 类别: 搜索
  - 并发安全: 是
  - 作用: 类似 `ls`，列出当前项目目录中的文件/目录，可递归；只读。
  - 使用场景: 用户让 agent 查看项目结构、目录、文件列表。

- `grep_project`
  - 路径: `agent/tools/project.py`
  - 类别: 搜索
  - 并发安全: 是
  - 作用: 类似 `grep`/`rg`，在当前项目内搜索文本，返回路径、行号、列号和匹配行。
  - 使用场景: 用户让 agent 查找函数、变量、关键词、报错文本、配置项。

- `read_project_file`
  - 路径: `agent/tools/project.py`
  - 类别: 文件
  - 并发安全: 是
  - 作用: 读取当前项目内的文本文件；只读。
  - 使用场景: `ls_project` 或 `grep_project` 定位到文件后，需要查看具体文件内容。

- `calculator`
  - 路径: `agent/tools/calculator.py`
  - 类别: 执行
  - 并发安全: 是
  - 作用: 安全计算四则运算表达式。
  - 使用场景: 用户要求算数、验证简单数学结果。

- `current_time`
  - 路径: `agent/tools/time_tool.py`
  - 类别: 执行
  - 并发安全: 是
  - 作用: 获取指定 IANA 时区的当前时间，默认 `Asia/Shanghai`。
  - 使用场景: 用户询问当前时间、日期，或需要时间戳。

- `run_command`
  - 路径: `agent/tools/command.py`
  - 类别: 执行
  - 并发安全: 否
  - 作用: 在当前项目内本地运行命令，例如运行 Python 脚本、单元测试或检查命令；不通过 shell 执行，工作目录不能离开项目。
  - 使用场景: 用户要求跑代码、跑测试、验证脚本输出或执行项目内命令。
  - 审查: 执行前会交给 `permission_review` 判断风险，危险命令会被拦截。

- `save_memory`
  - 路径: `agent/tools/memory_tools.py`
  - 类别: 记忆
  - 并发安全: 否
  - 作用: 保存一条长期记忆到 `memory/` 目录，并更新 `memory/MEMORY.md` 索引。
  - 使用场景: 用户明确表达长期偏好、项目长期约束、已确认的协作方式或外部引用时使用。
  - 生命周期: 支持 `ttl_days`、`salience`、`confidence`、`replace_path`，用于 TTL、显著性衰减和冲突覆盖。
  - 限制: 只保存无法从代码、文件或 Git 重新推导的信息；不要保存临时任务、debug 过程、文件结构或一次性对话。

- `delete_memory`
  - 路径: `agent/tools/memory_tools.py`
  - 类别: 记忆
  - 并发安全: 否
  - 作用: 根据用户显式要求删除一条具体长期记忆，并更新 `memory/MEMORY.md`。
  - 使用场景: 用户说“忘记这条”“删除这个记忆”“以后不要记这个”。
  - 审查: 需要 `permission_review` 放行。

- `prune_memories`
  - 路径: `agent/tools/memory_tools.py`
  - 类别: 记忆
  - 并发安全: 否
  - 作用: 按 TTL、使用频率和显著性衰减清理过期或低价值长期记忆。
  - 使用场景: 用户要求清理长期记忆，或需要手动触发遗忘策略。

- `snip_context`
  - 路径: `agent/tools/context_tools.py`
  - 类别: 上下文
  - 并发安全: 否
  - 作用: 标记旧工具结果可以被裁剪，系统会把匹配的工具结果内容替换为 `[Old tool result content cleared]`。
  - 使用场景: 读取/搜索了大量文件，分析完成后不再需要保留完整工具结果时使用。
  - 限制: 不删除消息，只清理工具结果正文，保持 tool_call_id 链路完整。

## MCP 工具

MCP server 不固定写死在这个 README 里，而是从项目根目录的 `.mcp.json` 动态发现。发现后的工具会注册成：

```text
mcp__<server_name>__<tool_name>
```

当前已接入的 MCP server：

- `amap-maps`：通过 stdio 启动 `@amap/amap-maps-mcp-server`，适合地址解析、地点搜索、经纬度查询和路线规划。
- `tavily`：通过 stdio 启动 `tavily-mcp@latest`，适合联网搜索、网页内容提取、站点地图发现和网页爬取。

`.mcp.json` 保存本地 API key，已经加入 `.gitignore`，不要提交到远端。

MCP 工具同样走普通工具管线：

- `tool_search` 只看到摘要和 schema，按问题选择是否开放 MCP 工具。
- 主模型拿到被选中的 MCP function schema 后生成参数。
- `tool_runner` 做参数校验、settings 权限规则、上下文审查和必要的用户确认。
- 运行时通过 stdio fork MCP server，调用具体 MCP tool，并只把结果回填给主 agent。

Terminal 里输入 `/@` 可以手动选择 MCP server，表示“本轮我明确希望使用某个 MCP”。也可以直接输入 `/@amap-maps 查询杭州西湖附近的咖啡店` 或 `/@tavily 搜索 LangGraph 最新文档`。

## 审查子智能体

- `permission_review`
  - 路径: `agent/sub_agent/permission_review.py`
  - 作用: 在工具真正执行前审查工具名、参数、工具职责和当前上下文，返回 `allowed/risk/reason`。
  - 设计: 权限管线包含 `validateInput`、规则匹配、上下文审查和 `interactivePrompt`。读文件、搜索、计算、查时间默认低风险；写文件、删文件、本地命令属于需要谨慎的操作；删除大量文件、修改 git 历史、推送远端、离开项目目录、执行不明安装脚本等高风险行为会被阻止或要求用户确认。

- `memory_writer`
  - 路径: `agent/sub_agent/memory_writer.py`
  - 作用: 对话结束后由后台 forked memory agent 观察当前 working memory，按候选提取流水线提取长期记忆并写入 `memory/`。
  - 互斥: 如果主 agent 已经用 `save_memory` 主动保存，本轮后台提取会跳过，避免重复。

- `memory_retrieval`
  - 路径: `agent/sub_agent/memory_retrieval.py`
  - 作用: 新一轮对话前读取 `memory/MEMORY.md` 作为记忆目录，并按当前问题选择少量相关正文。
  - 设计: 主 agent 默认只看到索引；只有相关时才读取具体 `memory/**/*.md` 文件正文。
